Project1/force-app/main/default/objects/Mail__c/fields/Address_To__c.field-meta.xml
<CustomField>
    <fullName>Address_To__c</fullName>
    <formula>inhabitant__r.Contact__r.FirstName + &quot; &quot; +  inhabitant__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address To:</label>
    <type>Text</type>
</CustomField>