Project1/force-app/main/default/objects/Mail__c/fields/delivery_status__c.field-meta.xml
<CustomField>
    <fullName>delivery_status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Status</valueSetName>
    </valueSet>
</CustomField>