Project1/force-app/main/default/objects/Mail__c/fields/fragile__c.field-meta.xml
<CustomField>
    <fullName>fragile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fragile</label>
    <type>Checkbox</type>
</CustomField>