Project1/force-app/main/default/objects/Mail__c/fields/height__c.field-meta.xml
<CustomField>
    <fullName>height__c</fullName>
    <inlineHelpText>height of the object</inlineHelpText>
    <label>Height</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>