Project1/force-app/main/default/objects/Mail__c/fields/inhabitant__c.field-meta.xml
<CustomField>
    <fullName>inhabitant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inhabitant Reference</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>