Project1/force-app/main/default/objects/Mail__c/fields/Insured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insured_Amount__c</fullName>
    <label>Insured Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>