Project1/force-app/main/default/objects/Mail__c/fields/route__c.field-meta.xml
<CustomField>
    <fullName>route__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Route Reference</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>