Project1/force-app/main/default/objects/Mail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Address__c</columns>
    <columns>delivery_status__c</columns>
    <columns>fragile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>