Project1/force-app/main/default/objects/Mail__c/listViews/Mail_in_Shipping.listView-meta.xml
<ListView>
    <fullName>Mail_in_Shipping</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>delivery_status__c</field>
        <operation>notEqual</operation>
        <value>Delivered</value>
    </filters>
    <label>Mail in Shipping</label>
</ListView>