Project1/force-app/main/default/objects/Mail__c/listViews/Past_Deliveries.listView-meta.xml
<ListView>
    <fullName>Past_Deliveries</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>delivery_status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>Past Deliveries</label>
</ListView>